<resources>
    <string name="app_name">Assignment6</string>
    <string name="nav_restaurant">Restaurant</string>
    <string name="nav_category">Category</string>
    <string name="nav_camera">Camera</string>
    <string name="nav_notification">Notification</string>
    <string name="nav_profile">Profile</string>
    <string name="label_okay">Okay</string>
    <string name="label_tab_detail">Detail</string>
    <string name="label_tab_menu">Menu</string>
    <string name="label_tab_review">Review</string>
    <string name="label_no_category">No Category</string>
    <string name="label_no_data">No Data</string>
</resources>
