<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_restaurant"
        android:icon="@drawable/ic_nav_restaurant"
        android:title="@string/nav_restaurant" />

    <item
        android:id="@+id/nav_category"
        android:icon="@drawable/ic_nav_category"
        android:title="@string/nav_category" />

    <item
        android:id="@+id/nav_camera"
        android:icon="@drawable/ic_nav_camera"
        android:title="@string/nav_camera" />

    <item
        android:id="@+id/nav_notification"
        android:icon="@drawable/ic_nav_notification"
        android:title="@string/nav_notification"/>

    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_nav_profile"
        android:title="@string/nav_profile"/>

</menu>
